add search engine and table css fix

--- a/src/Editor.module.css
+++ b/src/Editor.module.css
@@ -7,7 +7,7 @@
 }
 
 .submit {
-    margin-top: 5vh;
+    margin: 5vh;
 }
 
 .center {
@@ -16,6 +16,6 @@
     flex: 1 0;
 }
 
-.nextStep{
+.nextStep {
     margin-top: 2vh;
 }
